--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "RECORD_ALL_CONTENT=1 REPLAY_BROWSER_PATH='/Users/filiphric/.replay/runtimes/Replay-Chromium.app/Contents/MacOS/Chromium' node spec.js",
+    "test": "RECORD_ALL_CONTENT=1 node spec.js",
     "upload": "replay upload-all",
     "postinstall": "cd app && npm install",
     "dev": "cd app && npm run dev"
