--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,31 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+orbs:
+  node: circleci/node@5.0.2
+  browser-tools: circleci/browser-tools@1.4.6
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+  replay:
+    environment: 
+      RECORD_ALL_CONTENT: 1
+    executor: node/default 
     steps:
       - checkout
+      - node/install-packages:
+          pkg-manager: npm
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run: 
+          name: Run the local app
+          command: npm run dev
+          background: true
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+          name: Run e2e tests 
+          command: npm test
+      - run:
+          name: Upload replays
+          when: always
+          command: npx @replayio/replay upload-all
+      
 workflows:
-  say-hello-workflow:
+  replay-workflow:
     jobs:
-      - say-hello
+      - replay
