--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
           pkg-manager: npm
       - browser-tools/install-chrome
       - browser-tools/install-chromedriver
+      - run:
+          name: Update Replay browsers
+          command: npx @replayio/replay update-browsers chromium
       - run: 
           name: Run the local app
           command: npm run dev
