--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
   replay:
     environment: 
       RECORD_ALL_CONTENT: 1
+      RECORD_REPLAY_VERBOSE: 1
     executor: node/default 
     steps:
       - checkout
